6.4: set fixed space for movie title in user profile to keep movie images aligned, opened up horizontal scroll bar to scroll thru favorite movies

--- a/src/app/user-profile/user-profile.component.scss
+++ b/src/app/user-profile/user-profile.component.scss
@@ -2,3 +2,15 @@
     height: 50px; 
     margin-bottom: 10px;
   }
+
+  .scroll-container {
+    display: flex;
+    overflow-x: auto;
+    gap: 10px;
+  }
+  
+  // .scroll-container::-webkit-scrollbar {
+  //   display: none;
+  // }
+
+  
